# gtk-vol

./: Makefile  Makefile.am  Makefile.in  README  configure  configure.ac  gtk-vol  gtk-vol.c
.deps/: gtk-vol.Po
