#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.68])
AC_INIT([gtk-vol], [0.1], [no@reply.com])
AM_INIT_AUTOMAKE(gtk-vol, 0.1)
AC_CONFIG_SRCDIR([gtk-vol.c])

# Checks for programs.
AC_PROG_CC

# Checks for libraries.
AC_CHECK_LIB([gtk/gtk.h])

# Checks for header files.
AC_CHECK_HEADERS([fcntl.h string.h])

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.
AC_CONFIG_FILES([Makefile])
AC_OUTPUT
